--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "watch-css": "concat node_modules/material-design-lite/material.min.css styles.css -o dist/bundle.css",
     "build-html": "copyfiles index.html dist",
     "watch-html": "concat index.html -o dist/index.html",
-    "build-js": "browserify src/playground.ts -p [tsify] | uglifyjs -c > dist/bundle.js",
-    "watch-js": "watchify src/playground.ts -p [tsify] -v --debug -o dist/bundle.js",
+    "watch-newHtml": "concat newIndex.html -o dist/newIndex.html",
+    "build-newHtml": "copyfiles newIndex.html dist",
+    "build-js": "browserify src/newPlayground.ts -p [tsify] | uglifyjs -c > dist/bundle.js",
+    "watch-js": "watchify src/newPlayground.ts -p [tsify] -v --debug -o dist/bundle.js",
     "build": "npm run prep && npm run build-js && npm run build-css && npm run build-html",
-    "watch": "npm run prep && concurrently \"npm run watch-js\" \"npm run watch-css\" \"npm run watch-html\"",
+    "watch": "npm run prep && concurrently \"npm run watch-js\" \"npm run watch-css\" \"npm run watch-html\" \"npm run watch-newHtml\"",
     "serve": "http-server -o -c-1 dist/",
     "serve-watch": "concurrently \"http-server -o -c-1 dist/\" \"npm run watch\""
   },
@@ -32,6 +34,7 @@
   },
   "dependencies": {
     "d3": "^3.5.16",
+    "echarts": "^4.2.1",
     "material-design-lite": "^1.3.0",
     "seedrandom": "^2.4.3"
   }
