--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "watch-html": "concat index.html -o dist/index.html",
     "watch-newHtml": "concat newIndex.html -o dist/newIndex.html",
     "build-newHtml": "copyfiles newIndex.html dist",
-    "build-js": "browserify src/newPlayground.ts -p [tsify] | uglifyjs -c > dist/bundle.js",
-    "watch-js": "watchify src/newPlayground.ts -p [tsify] -v --debug -o dist/bundle.js",
-    "build": "npm run prep && npm run build-js && npm run build-css && npm run build-html",
-    "watch": "npm run prep && concurrently \"npm run watch-js\" \"npm run watch-css\" \"npm run watch-html\" \"npm run watch-newHtml\"",
+    "build-js": "browserify src/playground.ts -p [tsify] | uglifyjs -c > dist/bundle.js",
+    "watch-js": "watchify src/playground.ts -p [tsify] -v --debug -o dist/bundle.js",
+    "watch-newjs": "watchify src/newPlayground.ts -p [tsify] -v --debug -o dist/newBundle.js",
+    "build-newjs": "browserify src/newPlayground.ts -p [tsify] | uglifyjs -c > dist/newBundle.js",
+    "build": "npm run prep && npm run build-js && npm run build-newjs && npm run build-css && npm run build-html",
+    "watch": "npm run prep && concurrently \"npm run watch-js\" \"npm run watch-newjs\" \"npm run watch-css\" \"npm run watch-html\" \"npm run watch-newHtml\"",
     "serve": "http-server -o -c-1 dist/",
     "serve-watch": "concurrently \"http-server -o -c-1 dist/\" \"npm run watch\""
   },
